# gixguardkit_rust

./: .gitignore  Cargo.toml  build.rs  cbindgen.toml  ios_release_fat.sh  macos_release_fat.sh  rust-xc-universal-binary.sh  xc_generator.sh  xcode_build.sh
bindings/c/include/: gix_guard_kit_rust.h
cpp_tests_ref/: CMakeLists.txt  main.c
cpp_tests_ref/WireGuardKitC/: x25519.c  x25519.h
rust_cpp_test/: main.cpp
src/: build.rs  gix_guard.udl  lib.rs
src/utils/: keys_utils.rs  mod.rs  x25519.rs
utils/src/: lib.rs
