[package]
name = "gix_guard_kit_rust"
version = "0.1.0"
edition = "2021"


[lib]
name="gix_guard_kit"
crate-type = ["staticlib", "cdylib" ]
#crate-type = ["cdylib"]
# cargo-features = ["strip"]
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
opt-level = "s"
lto = "fat"
debug = false
codegen-units = 16

#[[bin]]
#name="generator"
#path = "src/build.rs"
#doc = false


[dependencies]
#cbindgen = { git = "https://github.com/mjhatamy/cbindgen", branch = "ref_fix" }
#cbindgen = "0.20.0"
#libc = "0.2.112"
rand = "0.8.4"

[build-dependencies]
cbindgen = { git = "https://github.com/mjhatamy/cbindgen", branch = "ref_fix" }
#cbindgen = { version = "0.20.0", path = "../../../../mjhatamy/git_contrib_projects/cbindgen"}
#cbindgen = "0.20.0"

# standard crate data is left out
[dev-dependencies]
pretty_assertions = "1"

#[target.aarch64-apple-darwin]
#crate-type = [ "framework" ]
#
#[target.x86_64-apple-darwin]
#crate-type = [ "framework" ]
# Android arm64
#[target.aarch64-linux-android]
#linker = "/opt/angle/third_party/android_ndk/build/core/toolchains/aarch64-linux-android-clang"

